Changed the rest of the conds

--- a/hail/python/hail/docs/tutorials/05-filter-annotate.ipynb
+++ b/hail/python/hail/docs/tutorials/05-filter-annotate.ipynb
@@ -75,9 +75,9 @@
     "missing_occupations = hl.set(['other', 'none'])\n",
     "\n",
     "t = users.annotate(\n",
-    "    cleaned_occupation = hl.cond(missing_occupations.contains(users.occupation),\n",
-    "                                 hl.null('str'),\n",
-    "                                 users.occupation))\n",
+    "    cleaned_occupation = hl.if_else(missing_occupations.contains(users.occupation),\n",
+    "                                    hl.null('str'),\n",
+    "                                    users.occupation))\n",
     "t.show()"
    ]
   },
@@ -170,9 +170,9 @@
     "missing_occupations = hl.set(['other', 'none'])\n",
     "\n",
     "t = users.select(\n",
-    "    cleaned_occupation = hl.cond(missing_occupations.contains(users.occupation),\n",
-    "                                 hl.null('str'),\n",
-    "                                 users.occupation))\n",
+    "    cleaned_occupation = hl.if_else(missing_occupations.contains(users.occupation),\n",
+    "                                    hl.null('str'),\n",
+    "                                    users.occupation))\n",
     "t.show()"
    ]
   },
@@ -185,9 +185,9 @@
     "missing_occupations = hl.set(['other', 'none'])\n",
     "\n",
     "t = users.transmute(\n",
-    "    cleaned_occupation = hl.cond(missing_occupations.contains(users.occupation),\n",
-    "                                 hl.null('str'),\n",
-    "                                 users.occupation))\n",
+    "    cleaned_occupation = hl.if_else(missing_occupations.contains(users.occupation),\n",
+    "                                    hl.null('str'),\n",
+    "                                    users.occupation))\n",
     "t.show()"
    ]
   },
