add "annotation_db" entry for tables in datasets.json

--- a/datasets/notebooks/giant_datasets.ipynb
+++ b/datasets/notebooks/giant_datasets.ipynb
@@ -145,6 +145,11 @@
     "        ht2.write(output_file, overwrite=True)\n",
     "\n",
     "    json_entry = {\n",
+    "        \"annotation_db\": {\n",
+    "            \"key_properties\": [\n",
+    "                \"unique\"\n",
+    "            ]\n",
+    "        },\n",
     "        \"description\": f\"GIANT (Genetic Investigation of ANthropometric Traits): \"\n",
     "                       f\"height exome array summary statistics Hail Table for {json_populations[output_name[population]]} \"\n",
     "                       f\"population(s).\",\n",
@@ -262,6 +267,11 @@
     "        ht2.write(output_file, overwrite=True)\n",
     "\n",
     "    json_entry = {\n",
+    "        \"annotation_db\": {\n",
+    "            \"key_properties\": [\n",
+    "                \"unique\"\n",
+    "            ]\n",
+    "        },\n",
     "        \"description\": f\"GIANT (Genetic Investigation of ANthropometric Traits): \"\n",
     "                       f\"body mass index (BMI) exome array summary statistics Hail Table \"\n",
     "                       f\"for {json_populations[output_name[population]]} population(s).\",\n",
@@ -377,6 +387,11 @@
     "        ht2.write(output_file, overwrite=True)\n",
     "\n",
     "    json_entry = {\n",
+    "        \"annotation_db\": {\n",
+    "            \"key_properties\": [\n",
+    "                \"unique\"\n",
+    "            ]\n",
+    "        },\n",
     "        \"description\": f\"GIANT (Genetic Investigation of ANthropometric Traits): \"\n",
     "                       f\"waist-hip ratio (WHR) adjusted for BMI exome array summary statistics Hail Table. \"\n",
     "                       f\"Note the following abbreviations used in filenames: C-combined sexes, M-men, W-women, \"\n",
