removed "non_unique" key properties

--- a/datasets/notebooks/gtex_datasets.ipynb
+++ b/datasets/notebooks/gtex_datasets.ipynb
@@ -207,9 +207,7 @@
     "\n",
     "    json_entry = {\n",
     "            \"annotation_db\": {\n",
-    "                \"key_properties\": [\n",
-    "                    \"non_unique\"\n",
-    "                ]\n",
+    "                \"key_properties\": []\n",
     "            },\n",
     "            \"description\": f\"GTEx: {tissue_name} eQTL tissue-specific all SNP gene \"\n",
     "                           f\"associations Hail Table. All variant-gene cis-eQTL associations \"\n",
