--- a/datasets/notebooks/dbSNP_datasets.ipynb
+++ b/datasets/notebooks/dbSNP_datasets.ipynb
@@ -18,8 +18,7 @@
    "outputs": [],
    "source": [
     "import hail as hl\n",
-    "hl.init(spark_conf={'spark.hadoop.fs.gs.requester.pays.mode': 'AUTO', \n",
-    "                    'spark.hadoop.fs.gs.requester.pays.project.id': 'broad-ctsa'})"
+    "hl.init()"
    ]
   },
   {
@@ -137,12 +136,12 @@
    "source": [
     "### Create Hail Tables for dbSNP\n",
     "\n",
-    "Now we can use the assembly report for each reference genome build to map from RefSeq accession numbers to chromosomes, and create Hail Tables. There are no samples or entries in the dbSNP VCFs. \n",
+    "Now we can use the assembly report for each reference genome build to map from RefSeq accession numbers to chromosomes, and create Hail Tables. There are no samples or entries in the dbSNP VCFs. Some helpful information about the dbSNP VCFs is available [here](https://www.ncbi.nlm.nih.gov/snp/docs/products/vcf/redesign/).\n",
     "\n",
     "We will create two Hail Tables for each reference genome build, both keyed by `[\"locus\", \"alleles\"]`:\n",
     "\n",
     "  - Table with all fields from the imported VCF (e.g. `gs://hail-datasets-us/dbSNP_154_GRCh37.ht`)\n",
-    "  - Table with only the rsID field (e.g. `gs://hail-datasets-us/dbSNP_rsids_154_GRCh37.ht`)"
+    "  - Table with only the rsID field (e.g. `gs://hail-datasets-us/dbSNP_rsid_154_GRCh37.ht`)"
    ]
   },
   {
@@ -169,23 +168,187 @@
     "refseq_to_chr38.pop(None, None)\n",
     "\n",
     "recodings = {\"GRCh37\": refseq_to_chr37, \n",
-    "             \"GRCh38\": refseq_to_chr38}\n",
+    "             \"GRCh38\": refseq_to_chr38}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to convert array of strings like hl.array([\"GnomAD:.,1,3.187e-05\",\"TOPMED:.,1,2.389e-05\"]) to a struct\n",
+    "def arr_str_to_struct(hl_array, known_keys):\n",
+    "    _dict = hl.dict(\n",
+    "        hl_array.map(\n",
+    "            lambda x: (\"_\" + x.split(\":\")[0], \n",
+    "                       x.split(\":\")[1].split(\",\").map(lambda x: hl.if_else(x == \".\", hl.missing(hl.tfloat), hl.float(x))))\n",
+    "        )\n",
+    "    )\n",
+    "    _struct =  hl.rbind(_dict, lambda d: hl.struct(**{k: _dict.get(k) for k in known_keys}))\n",
+    "    return _struct\n",
     "\n",
-    "# For use in filenames/metadata\n",
+    "# To generate all possible keys for allele frequency arrays after loading VCF as MatrixTable\n",
+    "#     known_keys_FREQ = mt.aggregate_rows(\n",
+    "#         hl.agg.explode(\n",
+    "#             lambda x: hl.agg.collect_as_set(x), mt.info.FREQ.split(\"\\\\|\").map(lambda x: x.split(\":\")[0])\n",
+    "#         )\n",
+    "#     )\n",
+    "\n",
+    "# Or if keys are already known \n",
+    "known_keys = ['GENOME_DK','TWINSUK','dbGaP_PopFreq','Siberian','Chileans',\n",
+    "              'FINRISK','HapMap','Estonian','ALSPAC','GoESP',\n",
+    "              'TOPMED','PAGE_STUDY','1000Genomes','Korea1K','ChromosomeY',\n",
+    "              'ExAC','Qatari','GoNL','MGP','GnomAD',\n",
+    "              'Vietnamese','GnomAD_exomes','PharmGKB','KOREAN','Daghestan',\n",
+    "              'HGDP_Stanford','NorthernSweden','SGDP_PRJ']\n",
+    "known_keys_FREQ = [f\"_{x}\" for x in known_keys]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First read in VCF files as MatrixTables, and reformat the allele frequency information in `info.FREQ` and the clinical attributes in `info`.\n",
+    "\n",
+    "Note that we are specifying a separate header file in the `hl.import_vcf` calls in the cell below. \n",
+    "\n",
+    "To make parsing strings easier, the following INFO fields in the VCF headers were changed from `Number=.` to `Number=1`: FREQ, CLNHGVS, CLNVI, CLNORIGIN, CLNSIG, CLNDISB, CLNDN, CLNREVSTAT, CLNACC. \n",
+    "\n",
+    "The modified VCF headers used are available in `gs://hail-datasets-tmp/dbSNP`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "name = \"dbSNP\"\n",
     "version = \"154\"\n",
+    "builds = [\"GRCh37\", \"GRCh38\"]\n",
     "\n",
-    "for build in [\"GRCh37\", \"GRCh38\"]:\n",
-    "    mt = hl.import_vcf(f\"gs://hail-datasets-tmp/{name}/{name}_{version}_{build}.vcf.bgz\", \n",
-    "                   contig_recoding=recodings[build],\n",
-    "                   skip_invalid_loci=True,\n",
-    "                   reference_genome=build)\n",
+    "for build in builds:\n",
+    "    mt = hl.import_vcf(\n",
+    "        path=f\"gs://hail-datasets-tmp/{name}/{name}_{version}_{build}.vcf.bgz\", \n",
+    "        header_file=f\"gs://hail-datasets-tmp/{name}/{name}_{version}_{build}_header_only.vcf.txt\", \n",
+    "        contig_recoding=recodings[build], \n",
+    "        skip_invalid_loci=True, \n",
+    "        reference_genome=build, \n",
+    "        min_partitions=512\n",
+    "    )\n",
+    "    # First go from str to array<str> for info.FREQ\n",
+    "    mt = mt.annotate_rows(\n",
+    "        info = mt.info.annotate(\n",
+    "            FREQ = hl.or_missing(hl.is_defined(mt.info.FREQ), mt.info.FREQ.split(\"\\\\|\"))\n",
+    "        )\n",
+    "    )\n",
+    "    # Then turn array<str> into a struct for info.FREQ\n",
+    "    mt = mt.annotate_rows(\n",
+    "        info = mt.info.annotate(\n",
+    "            FREQ = hl.or_missing(hl.is_defined(mt.info.FREQ), arr_str_to_struct(mt.info.FREQ, known_keys_FREQ))\n",
+    "        )\n",
+    "    )\n",
+    "    # Reformat clinical attributes fields in info from str to array<str>\n",
+    "    mt = mt.annotate_rows(\n",
+    "        info = mt.info.annotate(\n",
+    "            CLNHGVS = hl.or_missing(\n",
+    "                hl.is_defined(mt.info.CLNHGVS), \n",
+    "                mt.info.CLNHGVS.split(\"(?:(\\|)|(\\,))\")).map(lambda x: hl.if_else((x == \".\"), hl.missing(hl.tstr), x)),\n",
+    "            CLNVI = hl.or_missing(\n",
+    "                hl.is_defined(mt.info.CLNVI), \n",
+    "                mt.info.CLNVI.split(\"(?:(\\|)|(\\,))\")).filter(lambda x: x != \".\"),\n",
+    "            CLNORIGIN = hl.or_missing(\n",
+    "                hl.is_defined(mt.info.CLNORIGIN), \n",
+    "                mt.info.CLNORIGIN.split(\"(?:(\\|)|(\\,))\")).filter(lambda x: x != \".\"),\n",
+    "            CLNSIG = hl.or_missing(\n",
+    "                hl.is_defined(mt.info.CLNSIG), \n",
+    "                mt.info.CLNSIG.split(\"(?:(\\|)|(\\,))\")).filter(lambda x: x != \".\"),\n",
+    "            CLNDISDB = hl.or_missing(\n",
+    "                hl.is_defined(mt.info.CLNDISDB), \n",
+    "                mt.info.CLNDISDB.split(\"(?:(\\|)|(\\,))\")).filter(lambda x: x != \".\"),\n",
+    "            CLNDN = hl.or_missing(\n",
+    "                hl.is_defined(mt.info.CLNDN), \n",
+    "                mt.info.CLNDN.split(\"(?:(\\|)|(\\,))\")).filter(lambda x: x != \".\"),\n",
+    "            CLNREVSTAT = hl.or_missing(\n",
+    "                hl.is_defined(mt.info.CLNREVSTAT), \n",
+    "                mt.info.CLNREVSTAT.split(\"(?:(\\|)|(\\,))\")).filter(lambda x: x != \".\"),\n",
+    "            CLNACC = hl.or_missing(\n",
+    "                hl.is_defined(mt.info.CLNACC), \n",
+    "                mt.info.CLNACC.split(\"(?:(\\|)|(\\,))\")).filter(lambda x: x != \".\")\n",
+    "        )\n",
+    "    )\n",
     "    \n",
-    "    # No samples or entries, just grab table with the rows and write the full table\n",
-    "    ht = mt.rows()\n",
+    "    mt = mt.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/{name}_{version}_{build}.mt\", \n",
+    "                       _read_if_exists=True, \n",
+    "                       overwrite=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we can just grab the `rows` table since we have no sample or entry information in the MatrixTable. \n",
+    "\n",
+    "From there, we need to filter the biallelic and multiallelic variants into separate tables, split the multiallelic variants, and then union the split multiallelic table rows back with the biallelic table rows.\n",
+    "\n",
+    "The allele frequency arrays start with the reference allele which is then followed by alternate alleles as ordered in the ALT column (from the VCF). So after splitting we can index the array with `a_index` to pull out the relevant allele frequency."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "name = \"dbSNP\"\n",
+    "version = \"154\"\n",
+    "builds = [\"GRCh37\", \"GRCh38\"]\n",
+    "\n",
+    "for build in builds:\n",
+    "    # No samples or entries in MT, just grab table with the rows and write the full table\n",
+    "    ht = mt.rows()    \n",
+    "    ht_ba = ht.filter(hl.len(ht.alleles) <= 2)\n",
+    "    ht_ba = ht_ba.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/{name}_{version}_{build}_biallelic.ht\", \n",
+    "                             _read_if_exists=True, \n",
+    "                             overwrite=False)\n",
+    "\n",
+    "    ht_ma = ht.filter(hl.len(ht.alleles) > 2)\n",
+    "    ht_ma = ht_ma.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/{name}_{version}_{build}_multiallelic.ht\", \n",
+    "                             _read_if_exists=True, \n",
+    "                             overwrite=False)\n",
+    "\n",
+    "    ht_split = hl.split_multi(ht_ma, keep_star=True, permit_shuffle=True)\n",
+    "    ht_split = ht_split.repartition(64, shuffle=False)\n",
+    "    ht_split = ht_split.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/{name}_{version}_{build}_split_multiallelic.ht\", \n",
+    "                                   _read_if_exists=True, \n",
+    "                                   overwrite=False)\n",
+    "    \n",
+    "    # Next we have to union split multiallelics with filtered out biallelics  \n",
+    "    ht_union = ht_ba.union(ht_split, unify=True)\n",
+    "    ht_union = ht_union.annotate(\n",
+    "        a_index = hl.if_else(hl.is_missing(ht_union.a_index), 1, ht_union.a_index),\n",
+    "        was_split = hl.if_else(hl.is_missing(ht_union.was_split), False, ht_union.was_split),\n",
+    "        old_locus = hl.if_else(hl.is_missing(ht_union.old_locus), ht_union.locus, ht_union.old_locus),\n",
+    "        old_alleles = hl.if_else(hl.is_missing(ht_union.old_alleles), ht_union.alleles, ht_union.old_alleles)\n",
+    "    )\n",
+    "    ht_union = ht_union.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/{name}_{version}_{build}_unioned.ht\", \n",
+    "                                   _read_if_exists=True, \n",
+    "                                   overwrite=False)\n",
+    "    # Arrays for AFs start w/ ref allele at index 0, so just use a_index to get alternate AFs\n",
+    "    ht = ht_union.annotate(\n",
+    "        info = ht_union.info.annotate(\n",
+    "            FREQ = ht_union.info.FREQ.annotate(\n",
+    "                **{k: hl.or_missing(hl.is_defined(ht_union.info.FREQ[k]), ht_union.info.FREQ[k][ht_union.a_index]) \n",
+    "                   for k in known_keys_FREQ}\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
     "    ht = ht.repartition(512, shuffle=True)\n",
-    "    ht = ht.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/{name}_{version}_{build}_repartitioned.ht\", \n",
-    "                       _read_if_exists=True,\n",
+    "    ht = ht.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/{name}_{version}_{build}.ht\", \n",
+    "                       _read_if_exists=True, \n",
     "                       overwrite=False)\n",
     "\n",
     "    n_rows = ht.count()\n",
@@ -200,10 +363,32 @@
     "            n_partitions=n_partitions\n",
     "        )\n",
     "    )\n",
+    "    # Write out final table\n",
     "    ht.write(f\"gs://hail-datasets-us/{name}_{version}_{build}.ht\")\n",
     "    ht = hl.read_table(f\"gs://hail-datasets-us/{name}_{version}_{build}.ht\")\n",
-    "    ht.describe()\n",
-    "    \n",
+    "    ht.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Also write tables with only the rsID field, for smaller tables that just map `[locus, alleles]` to `rsID`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "name = \"dbSNP\"\n",
+    "version = \"154\"\n",
+    "builds = [\"GRCh37\", \"GRCh38\"]\n",
+    "\n",
+    "for build in builds:\n",
     "    # Write table with only rsid's\n",
     "    ht_rsid = hl.read_table(f\"gs://hail-datasets-us/{name}_{version}_{build}.ht\")\n",
     "    ht_rsid = ht_rsid.select(\"rsid\")\n",
@@ -213,16 +398,38 @@
     "\n",
     "    ht_rsid = ht_rsid.annotate_globals(\n",
     "        metadata=hl.struct(\n",
-    "            name=f\"{name}_rsids\",\n",
+    "            name=f\"{name}_rsid\",\n",
     "            version=version,\n",
     "            reference_genome=build,\n",
     "            n_rows=n_rows,\n",
     "            n_partitions=n_partitions\n",
     "        )\n",
     "    )\n",
-    "    ht_rsid.write(f\"gs://hail-datasets-us/{name}_rsids_{version}_{build}.ht\")\n",
-    "    ht_rsid = hl.read_table(f\"gs://hail-datasets-us/{name}_rsids_{version}_{build}.ht\")\n",
+    "    ht_rsid.write(f\"gs://hail-datasets-us/{name}_rsid_{version}_{build}.ht\")\n",
+    "    ht_rsid = hl.read_table(f\"gs://hail-datasets-us/{name}_rsid_{version}_{build}.ht\")\n",
     "    ht_rsid.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To check uniqueness of keys\n",
+    "tables = [\"gs://hail-datasets-us/dbSNP_rsid_154_GRCh37.ht\", \"gs://hail-datasets-us/dbSNP_rsid_154_GRCh38.ht\"]\n",
+    "for table in tables:\n",
+    "    ht = hl.read_table(table)\n",
+    "    \n",
+    "    ht_count = ht.count()\n",
+    "    print(f\"n = {ht_count}\")\n",
+    "    ht_distinct_count = ht.distinct().count()\n",
+    "    print(f\"n_distinct = {ht_distinct_count}\")\n",
+    "    \n",
+    "    if ht_count == ht_distinct_count:\n",
+    "        print(f\"{table} rows unique\\n\")\n",
+    "    else:\n",
+    "        print(f\"{table} rows NOT unique\\n\")"
    ]
   },
   {
@@ -231,7 +438,7 @@
    "source": [
     "### Add dbSNP to datasets API and annotation DB\n",
     "\n",
-    "Now we can add the tables we created to `hail/python/hail/experimental/datasets.json` and create schemas for the docs."
+    "Now we can add the tables we created to `hail/python/hail/experimental/datasets.json`:"
    ]
   },
   {
@@ -243,12 +450,11 @@
     "import os\n",
     "import json\n",
     "\n",
-    "output_dir = os.path.abspath(\"../../hail/python/hail/docs/datasets/schemas\")\n",
     "datasets_path = os.path.abspath(\"../../hail/python/hail/experimental/datasets.json\")\n",
     "with open(datasets_path, \"r\") as f:\n",
     "    datasets = json.load(f)\n",
     "\n",
-    "names = [\"dbSNP\", \"dbSNP_rsids\"]\n",
+    "names = [\"dbSNP\", \"dbSNP_rsid\"]\n",
     "version = \"154\"\n",
     "builds = [\"GRCh37\", \"GRCh38\"]\n",
     "\n",
@@ -293,8 +499,8 @@
     "        ]\n",
     "    }\n",
     "    \n",
-    "    if name == \"dbSNP_rsids\":\n",
-    "        json_entry[\"description\"] = \"dbSNP: This Hail Table only contains a mapping from Reference SNP IDs (rsID) to locus and alleles. For full dataset, see dbSNP.\"\n",
+    "    if name == \"dbSNP_rsid\":\n",
+    "        json_entry[\"description\"] = \"dbSNP: This Hail Table contains a mapping from locus/allele pairs to Reference SNP IDs (rsID). For the full dataset, see dbSNP.\"\n",
     "    \n",
     "    datasets[name] = json_entry\n",
     "\n",
@@ -304,60 +510,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# {k: v for k, v in datasets.items() if \"dbSNP\" in k}"
+    "After adding tables to `datasets.json`, create .rst schema files for docs:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Verify we can load tables\n",
-    "datasets_path = os.path.abspath(\"../../hail/python/hail/experimental/datasets.json\")\n",
-    "with open(datasets_path, \"r\") as f:\n",
-    "    datasets = json.load(f)\n",
-    "\n",
-    "# regions = [(\"aws\", \"us\"), (\"gcp\", \"us\"), (\"gcp\", \"eu\")]\n",
-    "regions = [(\"gcp\", \"us\"), (\"gcp\", \"eu\")]\n",
-    "for version in datasets[\"dbSNP\"][\"versions\"]:\n",
-    "    v = version[\"version\"]\n",
-    "    if v == \"154\":\n",
-    "        rg = version[\"reference_genome\"]\n",
-    "        print(f\"v{v}_{rg}\")\n",
-    "        for r in regions:\n",
-    "            cloud, region = r\n",
-    "            print(f\"{cloud}_{region}\")\n",
-    "            url = version[\"url\"][cloud][region]\n",
-    "            print(url)\n",
-    "            ht = hl.read_table(url)\n",
-    "            ht.describe()\n",
-    "            print(\"\\n\")\n",
-    "            \n",
-    "for version in datasets[\"dbSNP_rsids\"][\"versions\"]:\n",
-    "    v = version[\"version\"]\n",
-    "    if v == \"154\":\n",
-    "        rg = version[\"reference_genome\"]\n",
-    "        print(f\"v{v}_{rg}\")\n",
-    "        for r in regions:\n",
-    "            cloud, region = r\n",
-    "            print(f\"{cloud}_{region}\")\n",
-    "            url = version[\"url\"][cloud][region]\n",
-    "            print(url)\n",
-    "            ht = hl.read_table(url)\n",
-    "            ht.describe()\n",
-    "            print(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Create/update schema .rst file\n",
@@ -368,7 +532,7 @@
     "with open(datasets_path, \"r\") as f:\n",
     "    datasets = json.load(f)\n",
     "\n",
-    "names = [\"dbSNP\", \"dbSNP_rsids\"]\n",
+    "names = [\"dbSNP\", \"dbSNP_rsid\"]\n",
     "for name in names:\n",
     "    versions = sorted(set(dataset[\"version\"] for dataset in datasets[name][\"versions\"]))\n",
     "    if not versions:\n",
@@ -454,6 +618,13 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.8"
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
