corrected mappings from refseq accession numbers to reference genomes in notebook

--- a/datasets/notebooks/dbSNP_datasets.ipynb
+++ b/datasets/notebooks/dbSNP_datasets.ipynb
@@ -145,6 +145,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First load VCFs to get all the contigs present in each dataset so we can create a mapping to used to recode contigs from RefSeq accession numbers to GRCh37/38 builds. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mt37 = hl.import_vcf(f\"gs://hail-datasets-tmp/dbSNP/dbSNP_154_GRCh37.vcf.bgz\", \n",
+    "                     header_file=f\"gs://hail-datasets-tmp/dbSNP/dbSNP_154_GRCh37_header_only.vcf.txt\", \n",
+    "                     reference_genome=None, \n",
+    "                     min_partitions=512)\n",
+    "\n",
+    "mt38 = hl.import_vcf(f\"gs://hail-datasets-tmp/dbSNP/dbSNP_154_GRCh38.vcf.bgz\", \n",
+    "                     header_file=f\"gs://hail-datasets-tmp/dbSNP/dbSNP_154_GRCh38_header_only.vcf.txt\", \n",
+    "                     reference_genome=None, \n",
+    "                     min_partitions=512)\n",
+    "\n",
+    "mt37 = mt37.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/dbSNP_154_GRCh37_no_coding.mt\", \n",
+    "                       _read_if_exists=True, \n",
+    "                       overwrite=False)\n",
+    "\n",
+    "mt38 = mt38.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/dbSNP_154_GRCh38_no_coding.mt\", \n",
+    "                       _read_if_exists=True, \n",
+    "                       overwrite=False)\n",
+    "\n",
+    "# To get all contigs present for recoding to correct reference genome mapping\n",
+    "contigs_present37 = mt37.aggregate_rows(hl.agg.collect_as_set(mt37.locus.contig))\n",
+    "contigs_present38 = mt38.aggregate_rows(hl.agg.collect_as_set(mt38.locus.contig))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -154,21 +190,34 @@
    "source": [
     "# Load NCBI assembly reports with RefSeq mappings\n",
     "assembly37_ht = hl.read_table(\"gs://hail-datasets-us/NCBI_assembly_report_p13_GRCh37.ht\")\n",
+    "assembly37_ht = assembly37_ht.annotate(\n",
+    "    contig = hl.if_else(assembly37_ht.sequence_role == \"unlocalized-scaffold\", \n",
+    "                        assembly37_ht.genbank_accn, \n",
+    "                        assembly37_ht.assigned_molecule)\n",
+    ")\n",
     "assembly38_ht = hl.read_table(\"gs://hail-datasets-us/NCBI_assembly_report_p13_GRCh38.ht\")\n",
     "\n",
-    "# Map RefSeq identifiers to chromosomes for GRCh37 using the \"assigned_molecule\" field in assembly report\n",
+    "# Map RefSeq identifiers to chromosomes for GRCh37 using the \"contig\" field we created in assembly report\n",
     "rg37 = hl.get_reference(\"GRCh37\")\n",
-    "refseq_to_chr37 = dict(zip(assembly37_ht.refseq_accn.collect(), assembly37_ht.assigned_molecule.collect()))\n",
-    "refseq_to_chr37 = {k: v for k, v in refseq_to_chr37.items() if v in rg37.contigs}\n",
+    "refseq_to_chr37 = dict(zip(assembly37_ht.refseq_accn.collect(), assembly37_ht.contig.collect()))\n",
+    "refseq_to_chr37 = {k: v for k, v in refseq_to_chr37.items() if k in contigs_present37 and v in rg37.contigs}\n",
     "\n",
     "# Map RefSeq identifiers to chromosomes for GRCh38 using the \"ucsc_style_name\" field in assembly report\n",
     "rg38 = hl.get_reference(\"GRCh38\")\n",
     "refseq_to_chr38 = dict(zip(assembly38_ht.refseq_accn.collect(), assembly38_ht.ucsc_style_name.collect()))\n",
-    "refseq_to_chr38 = {k: v.split(\"_\")[0] for k, v in refseq_to_chr38.items() if v in rg38.contigs and \"chrUn\" not in v}\n",
-    "refseq_to_chr38.pop(None, None)\n",
+    "refseq_to_chr38 = {k: v for k, v in refseq_to_chr38.items() if k in contigs_present38 and v in rg38.contigs}\n",
     "\n",
-    "recodings = {\"GRCh37\": refseq_to_chr37, \n",
-    "             \"GRCh38\": refseq_to_chr38}"
+    "recodings = {\n",
+    "    \"GRCh37\": refseq_to_chr37, \n",
+    "    \"GRCh38\": refseq_to_chr38\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the function and known keys below to convert allele frequency arrays to structs:"
    ]
   },
   {
@@ -177,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to convert array of strings like hl.array([\"GnomAD:.,1,3.187e-05\",\"TOPMED:.,1,2.389e-05\"]) to a struct\n",
+    "# Convert array of strings like hl.array([\"GnomAD:.,1,3.187e-05\",\"TOPMED:.,1,2.389e-05\"]) to a struct\n",
     "def arr_str_to_struct(hl_array, known_keys):\n",
     "    _dict = hl.dict(\n",
     "        hl_array.map(\n",
@@ -188,28 +237,27 @@
     "    _struct =  hl.rbind(_dict, lambda d: hl.struct(**{k: _dict.get(k) for k in known_keys}))\n",
     "    return _struct\n",
     "\n",
-    "# To generate all possible keys for allele frequency arrays after loading VCF as MatrixTable\n",
+    "# To get all possible keys for allele frequency arrays after loading VCF as MatrixTable\n",
     "#     known_keys_FREQ = mt.aggregate_rows(\n",
     "#         hl.agg.explode(\n",
     "#             lambda x: hl.agg.collect_as_set(x), mt.info.FREQ.split(\"\\\\|\").map(lambda x: x.split(\":\")[0])\n",
     "#         )\n",
     "#     )\n",
     "\n",
-    "# Or if keys are already known \n",
     "known_keys = ['GENOME_DK','TWINSUK','dbGaP_PopFreq','Siberian','Chileans',\n",
     "              'FINRISK','HapMap','Estonian','ALSPAC','GoESP',\n",
     "              'TOPMED','PAGE_STUDY','1000Genomes','Korea1K','ChromosomeY',\n",
     "              'ExAC','Qatari','GoNL','MGP','GnomAD',\n",
     "              'Vietnamese','GnomAD_exomes','PharmGKB','KOREAN','Daghestan',\n",
     "              'HGDP_Stanford','NorthernSweden','SGDP_PRJ']\n",
-    "known_keys_FREQ = [f\"_{x}\" for x in known_keys]"
+    "known_keys_FREQ = list(map(lambda x: f\"_{x}\", known_keys))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First read in VCF files as MatrixTables, and reformat the allele frequency information in `info.FREQ` and the clinical attributes in `info`.\n",
+    "Now can read in VCF files again as MatrixTables with the correct contig recodings, and reformat the allele frequency information in `info.FREQ` and the clinical attributes in `info`.\n",
     "\n",
     "Note that we are specifying a separate header file in the `hl.import_vcf` calls in the cell below. \n",
     "\n",
@@ -229,27 +277,27 @@
     "builds = [\"GRCh37\", \"GRCh38\"]\n",
     "\n",
     "for build in builds:\n",
-    "    mt = hl.import_vcf(\n",
-    "        path=f\"gs://hail-datasets-tmp/{name}/{name}_{version}_{build}.vcf.bgz\", \n",
-    "        header_file=f\"gs://hail-datasets-tmp/{name}/{name}_{version}_{build}_header_only.vcf.txt\", \n",
-    "        contig_recoding=recodings[build], \n",
-    "        skip_invalid_loci=True, \n",
-    "        reference_genome=build, \n",
-    "        min_partitions=512\n",
-    "    )\n",
-    "    # First go from str to array<str> for info.FREQ\n",
+    "    mt = hl.import_vcf(f\"gs://hail-datasets-tmp/{name}/{name}_{version}_{build}.vcf.bgz\", \n",
+    "                       header_file=f\"gs://hail-datasets-tmp/{name}/{name}_{version}_{build}_header_only.vcf.txt\", \n",
+    "                       contig_recoding=recodings[build], \n",
+    "                       skip_invalid_loci=True, \n",
+    "                       reference_genome=build, \n",
+    "                       min_partitions=512)\n",
+    "\n",
+    "    # First annotation, go from str to array<str> for FREQ\n",
     "    mt = mt.annotate_rows(\n",
     "        info = mt.info.annotate(\n",
     "            FREQ = hl.or_missing(hl.is_defined(mt.info.FREQ), mt.info.FREQ.split(\"\\\\|\"))\n",
     "        )\n",
     "    )\n",
-    "    # Then turn array<str> into a struct for info.FREQ\n",
+    "    # Second annotation, turn array<str> into a struct for FREQ\n",
     "    mt = mt.annotate_rows(\n",
     "        info = mt.info.annotate(\n",
-    "            FREQ = hl.or_missing(hl.is_defined(mt.info.FREQ), arr_str_to_struct(mt.info.FREQ, known_keys_FREQ))\n",
+    "            FREQ = hl.or_missing(hl.is_defined(mt.info.FREQ), \n",
+    "                                 arr_str_to_struct(mt.info.FREQ, known_keys_FREQ))\n",
     "        )\n",
     "    )\n",
-    "    # Reformat clinical attributes fields in info from str to array<str>\n",
+    "    # Reformat clinical attributes from str to array\n",
     "    mt = mt.annotate_rows(\n",
     "        info = mt.info.annotate(\n",
     "            CLNHGVS = hl.or_missing(\n",
@@ -308,8 +356,10 @@
     "builds = [\"GRCh37\", \"GRCh38\"]\n",
     "\n",
     "for build in builds:\n",
-    "    # No samples or entries in MT, just grab table with the rows and write the full table\n",
-    "    ht = mt.rows()    \n",
+    "    # No samples or entries in MT, just grab table with the rows\n",
+    "    mt = hl.read_matrix_table(f\"gs://hail-datasets-tmp/checkpoints/{name}_{version}_{build}.mt\")\n",
+    "    ht = mt.rows()\n",
+    "       \n",
     "    ht_ba = ht.filter(hl.len(ht.alleles) <= 2)\n",
     "    ht_ba = ht_ba.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/{name}_{version}_{build}_biallelic.ht\", \n",
     "                             _read_if_exists=True, \n",
@@ -326,7 +376,7 @@
     "                                   _read_if_exists=True, \n",
     "                                   overwrite=False)\n",
     "    \n",
-    "    # Next we have to union split multiallelics with filtered out biallelics  \n",
+    "    # Next, have to fix indices and union ht_split with ht_ba\n",
     "    ht_union = ht_ba.union(ht_split, unify=True)\n",
     "    ht_union = ht_union.annotate(\n",
     "        a_index = hl.if_else(hl.is_missing(ht_union.a_index), 1, ht_union.a_index),\n",
@@ -337,11 +387,13 @@
     "    ht_union = ht_union.checkpoint(f\"gs://hail-datasets-tmp/checkpoints/{name}_{version}_{build}_unioned.ht\", \n",
     "                                   _read_if_exists=True, \n",
     "                                   overwrite=False)\n",
-    "    # Arrays for AFs start w/ ref allele at index 0, so just use a_index to get alternate AFs\n",
+    "    \n",
+    "    # Arrays for AFs start w/ ref allele in index 0, so just use a_index to get alternate AFs\n",
     "    ht = ht_union.annotate(\n",
     "        info = ht_union.info.annotate(\n",
     "            FREQ = ht_union.info.FREQ.annotate(\n",
-    "                **{k: hl.or_missing(hl.is_defined(ht_union.info.FREQ[k]), ht_union.info.FREQ[k][ht_union.a_index]) \n",
+    "                **{k: hl.or_missing(hl.is_defined(ht_union.info.FREQ[k]), \n",
+    "                                    ht_union.info.FREQ[k][ht_union.a_index]) \n",
     "                   for k in known_keys_FREQ}\n",
     "            )\n",
     "        )\n",
@@ -363,10 +415,10 @@
     "            n_partitions=n_partitions\n",
     "        )\n",
     "    )\n",
-    "    # Write out final table\n",
     "    ht.write(f\"gs://hail-datasets-us/{name}_{version}_{build}.ht\")\n",
     "    ht = hl.read_table(f\"gs://hail-datasets-us/{name}_{version}_{build}.ht\")\n",
-    "    ht.describe()"
+    "    ht.describe()\n",
+    "    print(str(hl.eval(ht.metadata)) + \"\\n\")"
    ]
   },
   {
@@ -407,7 +459,8 @@
     "    )\n",
     "    ht_rsid.write(f\"gs://hail-datasets-us/{name}_rsid_{version}_{build}.ht\")\n",
     "    ht_rsid = hl.read_table(f\"gs://hail-datasets-us/{name}_rsid_{version}_{build}.ht\")\n",
-    "    ht_rsid.describe()"
+    "    ht_rsid.describe()\n",
+    "    print(str(hl.eval(ht_rsid.metadata)) + \"\\n\")"
    ]
   },
   {
