add test to read urls to notebook

--- a/datasets/notebooks/reformat_buckets.ipynb
+++ b/datasets/notebooks/reformat_buckets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Create list with each line containing old path followed by new path\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Create dict mapping current urls to new urls\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Load config file\n",
@@ -105,6 +105,63 @@
     "# Write new entries to config file\n",
     "with open(datasets_json_path, \"w\") as f:\n",
     "    json.dump(datasets_json, f, sort_keys=True, ensure_ascii=False, indent=2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import hail as hl\n",
+    "hl.init(spark_conf={\"spark.hadoop.fs.s3a.aws.credentials.provider\":\n",
+    "                        \"org.apache.hadoop.fs.s3a.AnonymousAWSCredentialsProvider\"})\n",
+    "\n",
+    "# Test that we can load datasets from GCS and AWS\n",
+    "datasets_json_path = os.path.abspath(\"../../hail/python/hail/experimental/datasets.json\")\n",
+    "with open(datasets_json_path) as f:\n",
+    "    datasets_json = json.load(f)\n",
+    "\n",
+    "dataset_names = [name for name in datasets_json]\n",
+    "for name in dataset_names:\n",
+    "    print(name)\n",
+    "    versions = datasets_json[name][\"versions\"]\n",
+    "    for version in versions:\n",
+    "        if \"gcp\" in version[\"url\"]:\n",
+    "            if \"us\" in version[\"url\"][\"gcp\"]:\n",
+    "                url = version[\"url\"][\"gcp\"][\"us\"]\n",
+    "                print(url)\n",
+    "                if url.endswith(\".ht\"):\n",
+    "                    hl.read_table(url)\n",
+    "                elif url.endswith(\".mt\"):\n",
+    "                    hl.read_matrix_table(url)\n",
+    "                else:\n",
+    "                    hl.linalg.BlockMatrix.read(url)\n",
+    "            if \"eu\" in version[\"url\"][\"gcp\"]:\n",
+    "                url = version[\"url\"][\"gcp\"][\"eu\"]\n",
+    "                print(url)\n",
+    "                if url.endswith(\".ht\"):\n",
+    "                    hl.read_table(url)\n",
+    "                elif url.endswith(\".mt\"):\n",
+    "                    hl.read_matrix_table(url)\n",
+    "                else:\n",
+    "                    hl.linalg.BlockMatrix.read(url)\n",
+    "        if \"aws\" in version[\"url\"]:\n",
+    "            url = version[\"url\"][\"aws\"][\"us\"].replace(\"s3://\", \"s3a://\")\n",
+    "            print(url)\n",
+    "            if url.endswith(\".ht\"):\n",
+    "                hl.read_table(url)\n",
+    "            elif url.endswith(\".mt\"):\n",
+    "                hl.read_matrix_table(url)\n",
+    "            else:\n",
+    "                hl.linalg.BlockMatrix.read(url)"
    ],
    "metadata": {
     "collapsed": false,
